# OpenVulkan3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/module/: FindVulkan_disabled.cmake
docs/: Doxyfile  index.html  uml.mdj
example/: CMakeLists.txt
example/testbed/: CMakeLists.txt
example/testbed/src/: main.cpp
example/vulkan_minimal/: CMakeLists.txt
example/vulkan_minimal/include/: HelloTriangle.h
example/vulkan_minimal/src/: HelloTriangle.cpp  main.cpp
ovu/: CMakeLists.txt
ovu/include/ovu/: AWindow.h
ovu/include/ovu/config/: Ovu3Config.h  Ovu3Config.h.in  ResourcePathProvider.h  VersionInfo.h
ovu/include/ovu/core/: Application.h  WindowBase.h
ovu/include/ovu/entity/: Geometry.h  Vertex.h  VertexBuffer.h
ovu/include/ovu/vulkan/: ValidationLayers.h  VulkanApi.h  VulkanBuffer.h  VulkanBufferFactory.h  VulkanWindow.h
ovu/res/shader/: basic.vert  compile.bat  compile.sh
ovu/src/: AWindow.cpp
ovu/src/core/: WindowBase.cpp
ovu/src/vulkan/: ValidationLayers.cpp  VulkanWindow.cpp
test/src/integration/: CMakeLists.txt  main.cpp
test/src/unittest/: CMakeLists.txt  main.cpp
